fixed form size on mobile and game over restart button size

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,6 +1,6 @@
 button {
   padding: 0.5em 1em;
-  font-size: 1.5rem;
+  font-size: 1.5rem!important;
   border-radius: 8px!important;
   background: linear-gradient(140deg, #000, #000, #000, #000, #333);
   color: #eee;
